--- a/Building.xaml
+++ b/Building.xaml
@@ -88,7 +88,7 @@
                             <Image Source="/assets/Icons/instructor.png" Margin="45,-15,-81,-15" />
                         </MenuItem.Icon>
                     </MenuItem>
-                    
+
                     <!-- Ground btn -->
                     <MenuItem Margin="-1,260,1,-320" FontSize="38" FontWeight="Bold" Background="#FF0B5793">
                         <MenuItem.Header>
@@ -197,12 +197,12 @@
 
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="-58,136,0,0">
                     <Canvas Name="canvas" Background="White" Height="900" VerticalAlignment="Bottom">
-                        <Image Height="844" Source="/assets/Maps/01GroundFloor.png" Width="1469" Canvas.Top="25"
+                        <Image Height="896" Source="/assets/Maps/01GroundFloor.png" Width="1544" Canvas.Top="-156"
                                Name="image"
                                MouseWheel="Image_MouseWheel"
                                MouseLeftButtonDown="Image_MouseLeftButtonDown"
                                MouseLeftButtonUp="Image_MouseLeftButtonUp"
-                               MouseMove="Image_MouseMove" Canvas.Left="14" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+                               MouseMove="Image_MouseMove" Canvas.Left="-33" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" Stretch="UniformToFill">
                             <Image.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform/>
@@ -214,7 +214,7 @@
                         </Image>
 
                         <!-- Navigation Animation -->
-                        <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Height="63" Canvas.Left="760" Canvas.Top="506">
+                        <StackPanel Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Top" Height="63" Canvas.Left="750" Canvas.Top="362">
 
                             <TextBlock Name="desc1" Text="This way to Faculty/Function hall" FontSize="18" FontWeight="Bold" FontFamily="Tw Cen MT" Foreground="Black"/>
 
@@ -227,9 +227,9 @@
                             </ItemsControl>
                         </StackPanel>
 
-                        <StackPanel  Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top" Height="63" Canvas.Left="494" Canvas.Top="502">
+                        <StackPanel  Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Height="64" Canvas.Left="512" Canvas.Top="362">
 
-                            <TextBlock x:Name="desc2" Text="This way to Mezzanine" FontSize="24" FontWeight="Bold" FontFamily="Tw Cen MT" Foreground="Black" Height="34"/>
+                            <TextBlock x:Name="desc2" Text="This way to Mezzanine" FontSize="18" FontWeight="Bold" FontFamily="Tw Cen MT" Foreground="Black" Height="34"/>
 
                             <ItemsControl x:Name="ArrowsContainer2" HorizontalAlignment="Center">
                                 <ItemsControl.ItemsPanel>
