--- a/Court.xaml
+++ b/Court.xaml
@@ -172,7 +172,7 @@
 
                         </MenuItem.Icon>
                     </MenuItem>
-                    
+
                     <MenuItem Margin="1,716,-1,-778" FontSize="38" FontWeight="Bold" Background="#FF0B5793">
                         <MenuItem.Header>
                             <Grid>
@@ -196,12 +196,12 @@
 
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="-59,154,0,0">
                     <Canvas Name="canvas" Background="White" Height="900" VerticalAlignment="Bottom">
-                        <Image Height="844" Source="/assets/Maps/07Court.png" Width="1469" Canvas.Top="25"
+                        <Image Height="896" Source="/assets/Maps/07Court.png" Width="1544" Canvas.Top="-70"
                            Name="image"
                            MouseWheel="Image_MouseWheel"
                            MouseLeftButtonDown="Image_MouseLeftButtonDown"
                            MouseLeftButtonUp="Image_MouseLeftButtonUp"
-                           MouseMove="Image_MouseMove" Canvas.Left="14" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+                           MouseMove="Image_MouseMove" Canvas.Left="-29" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Top">
                             <Image.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform/>
